<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarCommands"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <TextView
            android:id="@+id/nodeTitleCommands"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/node_name"
            android:textSize="32sp"
            android:textColor="@color/black" />

        <Spinner
            android:id="@+id/nodeSpinnerCommands"
            android:layout_width="wrap_content"
            android:layout_height="58dp"
            android:layout_gravity="end" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:id="@+id/tvAttributeKey"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/attribute_key"
            android:layout_weight="2.3"
            android:textSize="14sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tvCurrentValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="0.7"
            android:text="@string/current_value"
            android:textSize="14sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tvNewValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:text="@string/new_value"
            android:textSize="14sp"
            android:gravity="center"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/parametersRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="75dp"/>


</LinearLayout>
